--- a/video_game_reviews_app_frontend/public/style.css
+++ b/video_game_reviews_app_frontend/public/style.css
@@ -26,13 +26,58 @@ main {
   text-align: center;
 }
 
-/*nav {
-  order: -1
-}*/
+p {
+  margin: 0px
+}
+
+.nav {
+  text-align: center;
+}
 
 aside {
   flex: 0 0 12em;
   background-color: #757575;
+}
+
+label {
+  display: block;
+  margin-bottom: .5rem;
+  font-weight: 600;
+}
+
+input {
+  height: 38px;
+  padding: 6px 10px;
+  background-color: #fff;
+  border: 1px solid #D1D1D1;
+  border-radius: 4px;
+  box-shadow: none;
+  box-sizing: border-box;
+}
+
+button {
+  display: inline-block;
+  height: 38px;
+  padding: 0 30px;
+  text-align: center;
+  color: #555;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #bbb;
+  cursor: pointer;
+  box-sizing: border-box
+}
+
+form {
+  text-align: center;
+  margin-top: 40px;
 }
 
 footer {
