--- a/video_game_reviews_app_frontend/public/style.css
+++ b/video_game_reviews_app_frontend/public/style.css
@@ -16,7 +16,7 @@ body {
   /*background-color: #303F9F;*/
 }
 
-header {
+nav {
   text-align: center;
   background-color: #757575;
 }
@@ -26,11 +26,32 @@ main {
   text-align: center;
 }
 
-/*nav {
-  order: -1
-}*/
+button {
+  display: inline-block;
+  height: 38px;
+  padding: 0 30px;
+  text-align: center;
+  color: #555;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #bbb;
+  cursor: pointer;
+  box-sizing: border-box
+}
 
-aside {
+form {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.game-container {
   flex: 0 0 12em;
   background-color: #757575;
 }
@@ -39,10 +60,3 @@ footer {
   text-align: center;
   background-color: #757575;
 }
-
-/*.weather {
-  margin: 5px;
-  padding: 5px 15px 5px 15px;
-  background-color: #E4E1DE;
-  border-radius: 5px;
-}*/
