--- a/video_game_reviews_app_frontend/public/style.css
+++ b/video_game_reviews_app_frontend/public/style.css
@@ -1,21 +1,28 @@
-header, div, main, nav, aside, footer {
+/*header, div, main, nav, aside, footer {
   border: 1px solid black;
-}
+}*/
 
 body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  /*background-image: url("http://cdn.desktopwallpapers4.me/media/thumbs_400x250/2/15373.jpg");*/
   background-color: #e0e0e0;
     font-family: Verdana, Geneva, sans-serif;
 }
 
 nav {
   text-align: center;
-  /*background-color: #757575;*/
-    background-image: url("https://www.unseen64.net/wp-content/uploads/2015/02/Shadow-Realms-banner-cancelled-Bioware-Austin-PC-game-1024x419.jpg");
-    display: flex;
+  background-color: #757575;
+  display: flex;
+}
+
+header {
+  background-image: url("https://i1.wp.com/bloody-disgusting.com/wp-content/uploads/2013/09/REBanner.jpg?resize=300%2C194");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 200px;
+  width: 100%;
+  text-align: center;
 }
 
 main {
@@ -47,21 +54,27 @@ button {
   box-sizing: border-box
 }
 
-form {
-  height: 210px; width: 100px;
-  border: 1px solid grey;
-  border-radius: 10px;
-  flex: auto;
-}
-
 aside {
   flex: 0 0 12em;
-  background-color: #e0e0e0;;
+  background-color: #e0e0e0;
+  width: auto;
 }
 
 img {
   height:200px;
   width: 200px;
+}
+
+.form {
+  height: 210px; width: 100px;
+  border-radius: 10px;
+  flex: auto;
+}
+
+.form-login {
+  height: 75px; width: 100px;
+  border-radius: 10px;
+  flex: auto;
 }
 
 .container {
@@ -80,4 +93,20 @@ img {
 
 #edit {
   display: none;
+}
+
+/*#index-games {
+  display: list-item;
+}*/
+
+#logout-button {
+  display: none;
+}
+
+#health-bar {
+  width: 30%;
+  height:auto;
+  position: relative;
+  opacity: 0.5;
+  right: 250px;
 }
