--- a/video_game_reviews_app_frontend/public/style.css
+++ b/video_game_reviews_app_frontend/public/style.css
@@ -1,7 +1,3 @@
-/*header, div, main, nav, aside, footer {
-  border: 1px solid black;
-}*/
-
 body {
   display: flex;
   min-height: 100vh;
@@ -37,7 +33,7 @@ footer {
 button {
   display: inline-block;
   height: 38px;
-  padding: 0 30px;
+  padding: 0 20px;
   text-align: center;
   color: rgb(255, 0, 0);
   font-size: 11px;
@@ -82,22 +78,26 @@ img {
   flex: 1;
 }
 
+.index-buttons {
+  -webkit-column-count: 3;
+}
+
 .game-container {
   flex: 0 0 12em;
   background-color: #e0e0e0;;
 }
 
 #game-info {
-  display: flex;
+  display: block;
 }
 
 #edit {
   display: none;
 }
 
-/*#index-games {
+#index-games {
   display: list-item;
-}*/
+}
 
 #logout-button {
   display: none;
@@ -106,7 +106,8 @@ img {
 #health-bar {
   width: 30%;
   height:auto;
-  position: relative;
+  position: absolute;;
   opacity: 0.5;
-  right: 250px;
+  left: 0;
+  object-fit: contain;
 }
