--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@ nav {
 }
 
 header {
-  background-image: url("https://i1.wp.com/bloody-disgusting.com/wp-content/uploads/2013/09/REBanner.jpg?resize=300%2C194");
+  background-image: url("http://www.sudburylibraries.ca/en/resources/game-banner.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   height: 200px;
@@ -140,6 +140,12 @@ img {
   width: 300px;
   position: absolute;
   /*right: 250px;*/
+}
+
+#title {
+  font-size: 50px;
+  color: red;
+  font-family: serif;
 }
 
 #edit-div {
