giantbomb search return info, working on displaying info

--- a/public/style.css
+++ b/public/style.css
@@ -92,6 +92,10 @@ img {
   background-color: #e0e0e0;;
 }
 
+.game-searchcontainer {
+  
+}
+
 #game-info {
   width: 400px;
   margin: 2px 2px 2px 2px;
